Green: a single deposit is now correctly printing out in the console

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         enter the following into the console:
         <ul>
           <li>app = new BankingApp()</li>
-          <li></li>
+          <li>
+            app.makeDeposit({date: '10/03/2023', transactionAmount: 1000.00})
+          </li>
           <li></li>
           <li></li>
           <li></li>
