Amber: refactored the bank account class to create a temporary statement report every time it runs getStatement

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li>
             app.makeDeposit({date: '10/03/2023', transactionAmount: 1000.00})
           </li>
-          <li></li>
+          <li>console.log(app.printMyAccountStatement())</li>
           <li></li>
           <li></li>
         </ul>
